--- a/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/numbers.xml
+++ b/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/numbers.xml
@@ -20,22 +20,35 @@
     </Row>
 
     <Row>
+        <Key android:codes="58" android:keyLabel=":" android:keyEdgeFlags="left"/>
+        <Key android:codes="59" android:keyLabel=";"/>
+        <Key android:codes="124" android:keyLabel="|"/>
+        <Key android:codes="62" android:keyLabel=">"/>
+        <Key android:codes="126" android:keyLabel="~"/>
+        <Key android:codes="95" android:keyLabel="_"/>
+        <Key android:codes="91" android:keyLabel="["/>
+        <Key android:codes="93" android:keyLabel="]"/>
+        <Key android:codes="125" android:keyLabel="{"/>
+        <Key android:codes="123" android:keyLabel="}" android:keyWidth="10%p"/>
+    </Row>
+
+    <Row>
         <Key android:codes="33" android:keyLabel="!"/>
         <Key android:codes="40" android:keyLabel="("/>
         <Key android:codes="41" android:keyLabel=")"/>
         <Key android:codes="43" android:keyLabel="+"/>
         <Key android:codes="45" android:keyLabel="-"/>
         <Key android:codes="61" android:keyLabel="="/>
-        <Key android:codes="37" android:keyLabel="%"/>
+        <Key android:codes="63" android:keyLabel="?"/>
         <Key android:codes="64" android:keyLabel="@"/>
         <Key android:codes="47" android:keyLabel="/"/>
-        <Key android:codes="-6" android:keyLabel="abc" android:isRepeatable="true" android:keyEdgeFlags="right"/>
+        <Key android:codes="-6" android:keyLabel="abc" android:keyEdgeFlags="right"/>
     </Row>
 
     <Row android:rowEdgeFlags="bottom">
         <Key android:codes="-10" android:keyLabel="CAM" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
-        <Key android:codes="32" android:keyLabel="SPACE" android:keyWidth="40%p" android:isRepeatable="true"/>
-        <Key android:codes="-5" android:keyLabel="DEL" android:keyWidth="20%p" android:isRepeatable="true"/>
-        <Key android:codes="-4" android:keyLabel="DONE" android:keyWidth="20%p" android:keyEdgeFlags="right"/>
+        <Key android:codes="32" android:keyLabel="SPACE" android:keyWidth="50%p" android:isRepeatable="true"/>
+        <Key android:codes="-5" android:keyLabel="DEL" android:keyWidth="15%p" android:isRepeatable="true"/>
+        <Key android:codes="-4" android:keyLabel="DONE" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
 </Keyboard>
