--- a/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/qwerty.xml
+++ b/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/qwerty.xml
@@ -32,7 +32,7 @@
         <!--<Key android:codes="35,64" android:keyLabel="\# \@" android:keyEdgeFlags="right"/>-->
     </Row>
     <Row>
-        <Key android:codes="-1" android:keyLabel="CAPS" android:keyEdgeFlags="left"/>
+        <Key android:codes="-1" android:keyIcon="@drawable/ic_keyboard_capslock_black_24dp" android:keyEdgeFlags="left"/>
         <Key android:codes="122" android:keyLabel="z"/>
         <Key android:codes="120" android:keyLabel="x"/>
         <Key android:codes="99" android:keyLabel="c"/>
@@ -46,7 +46,7 @@
     <Row android:rowEdgeFlags="bottom">
         <Key android:codes="-10" android:keyIcon="@drawable/ic_action_name" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
         <Key android:codes="32" android:keyLabel="SPACE" android:keyWidth="50%p" android:isRepeatable="true"/>
-        <Key android:codes="-5" android:keyLabel="DEL" android:keyWidth="15%p" android:isRepeatable="true"/>
-        <Key android:codes="-4" android:keyLabel="DONE" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
+        <Key android:codes="-5" android:keyIcon="@drawable/ic_backspace" android:keyWidth="15%p" android:isRepeatable="true"/>
+        <Key android:codes="-4" android:keyIcon="@drawable/ic_keyboard_return_black_24dp" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
 </Keyboard>
