Creates two new xmls

--- a/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/qwerty_with_emojis.xml
+++ b/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/qwerty_with_emojis.xml
@@ -6,6 +6,13 @@
     >
 
     <Row>
+        <Key android:codes="-100" android:keyLabel="&#x1f595;" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
+        <Key android:codes="-101" android:keyLabel="&#x1f624;" android:keyWidth="20%p" />
+        <Key android:codes="-102" android:keyLabel="&#x1f621;" android:keyWidth="20%p" />
+        <Key android:codes="-103" android:keyLabel="&#x1f92c;" android:keyWidth="20%p" />
+        <Key android:codes="-104" android:keyLabel="&#x1f47f;" android:keyWidth="20%p" />
+    </Row>
+    <Row>
         <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
         <Key android:codes="119" android:keyLabel="w"/>
         <Key android:codes="101" android:keyLabel="e"/>
