--- a/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/numbers_with_emojis.xml
+++ b/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/numbers_with_emojis.xml
@@ -53,9 +53,9 @@
     </Row>
 
     <Row android:rowEdgeFlags="bottom">
-        <Key android:codes="-10" android:keyLabel="CAM" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
+        <Key android:codes="-10" android:keyIcon="@drawable/ic_action_name" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
         <Key android:codes="32" android:keyLabel="SPACE" android:keyWidth="50%p" android:isRepeatable="true"/>
-        <Key android:codes="-5" android:keyLabel="DEL" android:keyWidth="15%p" android:isRepeatable="true"/>
-        <Key android:codes="-4" android:keyLabel="DONE" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
+        <Key android:codes="-5" android:keyIcon="@drawable/ic_backspace" android:keyWidth="15%p" android:isRepeatable="true"/>
+        <Key android:codes="-4" android:keyIcon="@drawable/ic_keyboard_return_black_24dp" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
     </Row>
 </Keyboard>
