--- a/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/numbers_with_emojis.xml
+++ b/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/numbers_with_emojis.xml
@@ -7,11 +7,11 @@
     >
 
     <Row>
-        <Key android:codes="-100" android:keyLabel="&#x1f595;" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
-        <Key android:codes="-101" android:keyLabel="&#x1f624;" android:keyWidth="20%p" />
-        <Key android:codes="-102" android:keyLabel="&#x1f621;" android:keyWidth="20%p" />
-        <Key android:codes="-103" android:keyLabel="&#x1f92c;" android:keyWidth="20%p" />
-        <Key android:codes="-104" android:keyLabel="&#x1f47f;" android:keyWidth="20%p" />
+        <Key android:codes="-100" android:keyLabel="" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
+        <Key android:codes="-101" android:keyLabel="" android:keyWidth="20%p" />
+        <Key android:codes="-102" android:keyLabel="" android:keyWidth="20%p" />
+        <Key android:codes="-103" android:keyLabel="" android:keyWidth="20%p" />
+        <Key android:codes="-104" android:keyLabel="" android:keyWidth="20%p" />
     </Row>
     <Row>
         <Key android:codes="48" android:keyLabel="0" android:keyEdgeFlags="left"/>
