--- a/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/qwerty_with_emojis.xml
+++ b/FaceRecognitionEmojiKeyboard/app/src/main/res/xml/qwerty_with_emojis.xml
@@ -6,11 +6,11 @@
     >
 
     <Row>
-        <Key android:codes="-100" android:keyLabel="&#x1f595;" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
-        <Key android:codes="-101" android:keyLabel="&#x1f624;" android:keyWidth="20%p" />
-        <Key android:codes="-102" android:keyLabel="&#x1f621;" android:keyWidth="20%p" />
-        <Key android:codes="-103" android:keyLabel="&#x1f92c;" android:keyWidth="20%p" />
-        <Key android:codes="-104" android:keyLabel="&#x1f47f;" android:keyWidth="20%p" />
+        <Key android:codes="-100" android:keyLabel="" android:keyWidth="20%p"  android:keyEdgeFlags="left"/>
+        <Key android:codes="-101" android:keyLabel="" android:keyWidth="20%p" />
+        <Key android:codes="-102" android:keyLabel="" android:keyWidth="20%p" />
+        <Key android:codes="-103" android:keyLabel="" android:keyWidth="20%p" />
+        <Key android:codes="-104" android:keyLabel="" android:keyWidth="20%p" />
     </Row>
     <Row>
         <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
@@ -39,7 +39,7 @@
         <!--<Key android:codes="35,64" android:keyLabel="\# \@" android:keyEdgeFlags="right"/>-->
     </Row>
     <Row>
-        <Key android:codes="-1" android:keyLabel="CAPS" android:keyEdgeFlags="left"/>
+        <Key android:codes="-1" android:keyIcon="@drawable/ic_keyboard_capslock_black_24dp" android:keyEdgeFlags="left"/>
         <Key android:codes="122" android:keyLabel="z"/>
         <Key android:codes="120" android:keyLabel="x"/>
         <Key android:codes="99" android:keyLabel="c"/>
